--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
               <div id="name"> <p>Greg Hooper</p></div>
           </div>
     </div>
-  
+    <script src="./index.js">/*ahhh no script yet*/</script>
   </body>
 </html>
