--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
   <head>
-    <title>Blog preview card by KERHAB</title>
+    <title>Blog preview card</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -25,6 +26,6 @@
               <div id="name"> <p>Greg Hooper</p></div>
           </div>
     </div>
-    <script src="./index.js">/*ahhh no script yet*/</script>
+    <script src="./index.js"></script> /*ahhh no script yet*/
   </body>
 </html>
